# automation-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY_WARNING.md  SETUP.md  analyze_pdf.py  detailed_email_check.py  docker-compose.yml  nginx.conf  pyproject.toml  run.py  test_attachment_extraction.py  test_emails.py  test_imap.py  test_shopify_parser.py
.github/workflows/: ci-cd.yml
src/automation/: celery_app.py  main.py
src/automation/adapters/: email_imap.py  excel_parser.py  file_storage.py  metro_xml_parser.py  parser_registry.py  pdf_parser.py  repository_sqlite.py  security_scanner.py  shopify_pdf_parser.py
src/automation/api/: __init__.py  dependencies.py  routers.py
src/automation/api/endpoints/: __init__.py  emails.py  files.py  service.py  system.py
src/automation/app/: use_cases.py
src/automation/cli/: __init__.py  main.py
src/automation/config/: logging.py  settings.py  settings_old.py
src/automation/domain/: models.py
src/automation/ports/: document_parser.py  email.py  file_storage.py  repository.py
src/automation/tasks/: __init__.py  email_processing.py  file_cleanup.py  monitoring.py  retry_processing.py
src/automation/tests/: test_api_emails_endpoints.py  test_api_files_endpoints.py  test_api_system_endpoints.py  test_attachment_extraction.py  test_files_path_resolution.py  test_imap.py  test_invoice_model.py  test_metro_xml_parser.py  test_repository_sqlite.py  test_service_endpoints.py  test_shopify_parser.py  test_shopify_pdf_parser.py  test_use_cases.py
src/automation/web/: __init__.py  interface.py
templates/: base.html  dashboard.html  files.html  logs.html  settings.html
