[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-platform"
version = "0.1.0"
description = "Email-driven automation system"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.31",
    "openpyxl>=3.1",
    "pdfplumber>=0.10",
    "pydantic>=2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
    "aiofiles>=23.0.0",
    # Background tasks
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # System monitoring
    "psutil>=5.9.0",
    # HTTP clients
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=4.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
automation-server = "automation.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["src/automation/tests"]
markers = [
    "integration: integration tests",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
